FPS limiter works when mainloop is disabled.