@@ -16,6 +16,9 @@ title: Version 1.10 > Minor
 This changelog will contain all changes from 1.10.0 onwards before the next major version.
 !!!
 
+==- Version 1.10.15
+Changed to a custom sleep timer for more accurate and consistent FPS limiting.
+Fix divide by zero in fps limiter.
 ==- Version 1.10.14
 FPS limiter works when mainloop is disabled.
 ==- Version 1.10.13
